rounded button white text

--- a/pages/wowpage.html
+++ b/pages/wowpage.html
@@ -107,35 +107,45 @@
                   class="dropdown-menu bg-dark"
                   aria-labelledby="navbarDropdown"
                 >
-                  <a class="dropdown-item" href="https://twitter.com/celestialsgg_"
+                  <a
+                    class="dropdown-item"
+                    href="https://twitter.com/celestialsgg_"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
                         <img src="../svgs/twitter.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="https://www.tiktok.com/@celestialsgg"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.tiktok.com/@celestialsgg"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
                         <img src="../svgs/tiktok.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="https://www.instagram.com/celestialsgg_/"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.instagram.com/celestialsgg_/"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
                         <img src="../svgs/instagram.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="https://www.twitch.tv/Celestials_GG"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.twitch.tv/Celestials_GG"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
                         <img src="../svgs/twitch.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
                         <img src="../svgs/youtube.svg" alt="" />
@@ -180,15 +190,17 @@
         </div>
         <div class="row justify-content-center mt-5">
           <div class="col-auto">
-            <h1 class="align-middle">Are you interested?</h1>
+            <h1 class="align-middle text-light">Are you interested?</h1>
           </div>
           <div class="col-auto">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_IYu7ci0QRXWmf4dSrzcwAckCzg_8GEDQPrWoGWnFGIW09A/viewform?usp=sf_link">
+            <a
+              class=""
+              href="https://docs.google.com/forms/d/e/1FAIpQLSe_IYu7ci0QRXWmf4dSrzcwAckCzg_8GEDQPrWoGWnFGIW09A/viewform?usp=sf_link"
+            >
               <button
                 style="height: 100%; width: 100%"
-                class="btn btn-dark"
+                class="btn btn-dark rounded-pill"
                 type="button"
-              
               >
                 <span style="font-weight: bold">APPLY FOR RAID ROSTER</span>
               </button>
@@ -209,11 +221,31 @@
           </div>
         </div>
         <div class="row justify-content-center mt-2">
-          <div class="col-auto"><a href="https://www.twitch.tv/Celestials_GG"><img src="../svgs/twitch.svg" alt=""></a></div>
-          <div class="col-auto"><a href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"><img src="../svgs/youtube.svg" alt="" /></a></div>
-          <div class="col-auto"><a href="https://twitter.com/celestialsgg_"><img src="../svgs/twitter.svg" alt="" /></a></div>
-          <div class="col-auto"><a href="https://www.instagram.com/celestialsgg_/"><img src="../svgs/instagram.svg" alt="" /></a></div>
-          <div class="col-auto"><a href="https://www.tiktok.com/@celestialsgg"><img src="../svgs/tiktok.svg" alt="" /></a></div>
+          <div class="col-auto">
+            <a href="https://www.twitch.tv/Celestials_GG"
+              ><img src="../svgs/twitch.svg" alt=""
+            /></a>
+          </div>
+          <div class="col-auto">
+            <a href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
+              ><img src="../svgs/youtube.svg" alt=""
+            /></a>
+          </div>
+          <div class="col-auto">
+            <a href="https://twitter.com/celestialsgg_"
+              ><img src="../svgs/twitter.svg" alt=""
+            /></a>
+          </div>
+          <div class="col-auto">
+            <a href="https://www.instagram.com/celestialsgg_/"
+              ><img src="../svgs/instagram.svg" alt=""
+            /></a>
+          </div>
+          <div class="col-auto">
+            <a href="https://www.tiktok.com/@celestialsgg"
+              ><img src="../svgs/tiktok.svg" alt=""
+            /></a>
+          </div>
         </div>
         <div class="row justify-content-end">
           <div class="col-7 col-md-3">
