testing new route

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="pages/leaguepage.html"
+                  <a class="dropdown-item" href="leaguepage.html"
                     ><div class="row">
                       <div class="col"><p class="text-light">League</p></div>
                       <div class="col justify-content-center">
