--- a/leaguepage.html
+++ b/leaguepage.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Celestials</title>
   </head>
@@ -221,6 +221,6 @@
       integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
       crossorigin="anonymous"
     ></script>
-    <script src="../scripts/leaguescript.js"></script>
+    <script src="scripts/leaguescript.js"></script>
   </body>
 </html>
