refactor for better looking links

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   class="dropdown-menu bg-dark"
                   aria-labelledby="navbarDropdown"
                 >
-                  <a class="dropdown-item" href="pages/valpage.html">
+                  <a class="dropdown-item" href="valorant.html">
                     <div class="row">
                       <div class="col"><p class="text-light">Valorant</p></div>
                       <div class="col justify-content-center">
@@ -73,7 +73,7 @@
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="leaguepage.html"
+                  <a class="dropdown-item" href="league.html"
                     ><div class="row">
                       <div class="col"><p class="text-light">League</p></div>
                       <div class="col justify-content-center">
@@ -81,7 +81,7 @@
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="pages/wowpage.html"
+                  <a class="dropdown-item" href="wow.html"
                     ><div class="row">
                       <div class="col"><p class="text-light">WoW</p></div>
                       <div class="col justify-content-center">
@@ -157,7 +157,7 @@
               <li class="nav-item">
                 <a
                   class="fw-bold text-light nav-link active"
-                  href="pages/s.html"
+                  href="streams.html"
                   role="button"
                   aria-haspopup="true"
                   aria-expanded="false"
