--- a/league.html
+++ b/league.html
@@ -23,13 +23,13 @@
         class="navgradtest drop-shadownav navbar navbar-expand-md navbar-light sticky-top mr-0"
       >
         <div class="container-lg">
-          <a class="navbar-brand font-weight-bold" href="../index.html">
+          <a class="navbar-brand font-weight-bold" href="index.html">
             <div class="row">
               <div class="col d-flex justify-content-center p-0">
-                <img src="../svgs/White_C_Logo (1).svg" alt="" />
+                <img src="svgs/White_C_Logo (1).svg" alt="" />
               </div>
               <div class="col p-0 align-middle">
-                <img src="../svgs/FINALWHITETEXT.svg" alt="" />
+                <img src="svgs/FINALWHITETEXT.svg" alt="" />
               </div>
             </div>
           </a>
@@ -65,27 +65,27 @@
                   class="dropdown-menu bg-dark"
                   aria-labelledby="navbarDropdown"
                 >
-                  <a class="dropdown-item" href="valpage.html">
+                  <a class="dropdown-item" href="valorant.html">
                     <div class="row">
                       <div class="col"><p class="text-light">Valorant</p></div>
                       <div class="col justify-content-center">
-                        <img src="../svgs/valorant.svg" alt="" />
+                        <img src="svgs/valorant.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="leaguepage.html"
+                  <a class="dropdown-item" href="league.html"
                     ><div class="row">
                       <div class="col"><p class="text-light">League</p></div>
                       <div class="col justify-content-center">
-                        <img src="../svgs/league.svg" alt="" />
+                        <img src="svgs/league.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="wowpage.html"
+                  <a class="dropdown-item" href="wow.html"
                     ><div class="row">
                       <div class="col"><p class="text-light">WoW</p></div>
                       <div class="col justify-content-center">
-                        <img src="../svgs/WoW.svg" alt="" />
+                        <img src="svgs/WoW.svg" alt="" />
                       </div>
                     </div>
                   </a>
@@ -107,38 +107,48 @@
                   class="dropdown-menu bg-dark"
                   aria-labelledby="navbarDropdown"
                 >
-                  <a class="dropdown-item" href="https://twitter.com/celestialsgg_"
+                  <a
+                    class="dropdown-item"
+                    href="https://twitter.com/celestialsgg_"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
-                        <img src="../svgs/twitter.svg" alt="" />
+                        <img src="svgs/twitter.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="https://www.tiktok.com/@celestialsgg"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.tiktok.com/@celestialsgg"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
-                        <img src="../svgs/tiktok.svg" alt="" />
+                        <img src="svgs/tiktok.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="https://www.instagram.com/celestialsgg_/"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.instagram.com/celestialsgg_/"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
-                        <img src="../svgs/instagram.svg" alt="" />
+                        <img src="svgs/instagram.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="https://www.twitch.tv/Celestials_GG"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.twitch.tv/Celestials_GG"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
-                        <img src="../svgs/twitch.svg" alt="" />
+                        <img src="svgs/twitch.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
-                        <img src="../svgs/youtube.svg" alt="" />
+                        <img src="svgs/youtube.svg" alt="" />
                       </div>
                     </div>
                   </a>
@@ -147,7 +157,7 @@
               <li class="nav-item">
                 <a
                   class="fw-bold text-light nav-link active"
-                  href="s.html"
+                  href="streams.html"
                   role="button"
                   aria-haspopup="true"
                   aria-expanded="false"
@@ -170,7 +180,6 @@
           </div>
         </div>
       </nav>
-
       <div class="container-fluid">
         <div class="row">
           <div class="col">
@@ -183,33 +192,57 @@
           </div>
         </div>
 
-        <div class="row justify-content-around" id="insert"></div>
+        <div class="container-fluid pb-5" id="insert">
+          <div class="container-lg"></div>
+        </div>
       </div>
-      <div class="container-fluid mt-5 pt-2" id="grad1">
+      <div class="container-fluid pt-2" id="grad1">
         <div class="row justify-content-center margin-auto">
           <div class="col-auto">
-            <img src="../svgs/White_C_Logo (1).svg" alt="" />
+            <img src="svgs/White_C_Logo (1).svg" alt="" />
           </div>
           <div class="col-auto">
-            <img src="../svgs/FINALWHITETEXT.svg" alt="" />
+            <img src="svgs/FINALWHITETEXT.svg" alt="" />
           </div>
         </div>
         <div class="row justify-content-center mt-2">
-          <div class="col-auto"><a href="https://www.twitch.tv/Celestials_GG"><img src="../svgs/twitch.svg" alt=""></a></div>
-          <div class="col-auto"><a href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"><img src="../svgs/youtube.svg" alt="" /></a></div>
-          <div class="col-auto"><a href="https://twitter.com/celestialsgg_"><img src="../svgs/twitter.svg" alt="" /></a></div>
-          <div class="col-auto"><a href="https://www.instagram.com/celestialsgg_/"><img src="../svgs/instagram.svg" alt="" /></a></div>
-          <div class="col-auto"><a href="https://www.tiktok.com/@celestialsgg"><img src="../svgs/tiktok.svg" alt="" /></a></div>
-        </div>
-        <div class="row justify-content-end">
-          <div class="col-7 col-md-3">
-            <p style="font-weight: bold" class="text-center text-light m-0">
-              &#169; CELESTIALS 2022
-            </p>
+          <div class="col-auto">
+            <a href="https://www.twitch.tv/Celestials_GG"
+              ><img src="svgs/twitch.svg" alt=""
+            /></a>
+          </div>
+          <div class="col-auto">
+            <a href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
+              ><img src="svgs/youtube.svg" alt=""
+            /></a>
+          </div>
+          <div class="col-auto">
+            <a href="https://twitter.com/celestialsgg_"
+              ><img src="svgs/twitter.svg" alt=""
+            /></a>
+          </div>
+          <div class="col-auto">
+            <a href="https://www.instagram.com/celestialsgg_/"
+              ><img src="svgs/instagram.svg" alt=""
+            /></a>
+          </div>
+          <div class="col-auto">
+            <a href="https://www.tiktok.com/@celestialsgg"
+              ><img src="svgs/tiktok.svg" alt=""
+            /></a>
+          </div>
+          <div class="row justify-content-end">
+            <div class="col-7 col-md-3">
+              <p style="font-weight: bold" class="text-center text-light m-0">
+                &#169; CELESTIALS 2022
+              </p>
+            </div>
           </div>
         </div>
       </div>
+      
     </div>
+    
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
