--- a/wow.html
+++ b/wow.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Celestials</title>
   </head>
@@ -23,13 +23,13 @@
         class="navgradtest drop-shadownav navbar navbar-expand-md navbar-light sticky-top mr-0"
       >
         <div class="container-lg">
-          <a class="navbar-brand font-weight-bold" href="../index.html">
+          <a class="navbar-brand font-weight-bold" href="index.html">
             <div class="row">
               <div class="col d-flex justify-content-center p-0">
-                <img src="../svgs/White_C_Logo (1).svg" alt="" />
+                <img src="svgs/White_C_Logo (1).svg" alt="" />
               </div>
               <div class="col p-0 align-middle">
-                <img src="../svgs/FINALWHITETEXT.svg" alt="" />
+                <img src="svgs/FINALWHITETEXT.svg" alt="" />
               </div>
             </div>
           </a>
@@ -65,27 +65,27 @@
                   class="dropdown-menu bg-dark"
                   aria-labelledby="navbarDropdown"
                 >
-                  <a class="dropdown-item" href="valpage.html">
+                  <a class="dropdown-item" href="valorant.html">
                     <div class="row">
                       <div class="col"><p class="text-light">Valorant</p></div>
                       <div class="col justify-content-center">
-                        <img src="../svgs/valorant.svg" alt="" />
+                        <img src="svgs/valorant.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="leaguepage.html"
+                  <a class="dropdown-item" href="league.html"
                     ><div class="row">
                       <div class="col"><p class="text-light">League</p></div>
                       <div class="col justify-content-center">
-                        <img src="../svgs/league.svg" alt="" />
+                        <img src="svgs/league.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="wowpage.html"
+                  <a class="dropdown-item" href="wow.html"
                     ><div class="row">
                       <div class="col"><p class="text-light">WoW</p></div>
                       <div class="col justify-content-center">
-                        <img src="../svgs/WoW.svg" alt="" />
+                        <img src="svgs/WoW.svg" alt="" />
                       </div>
                     </div>
                   </a>
@@ -112,7 +112,7 @@
                     href="https://twitter.com/celestialsgg_"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
-                        <img src="../svgs/twitter.svg" alt="" />
+                        <img src="svgs/twitter.svg" alt="" />
                       </div>
                     </div>
                   </a>
@@ -121,7 +121,7 @@
                     href="https://www.tiktok.com/@celestialsgg"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
-                        <img src="../svgs/tiktok.svg" alt="" />
+                        <img src="svgs/tiktok.svg" alt="" />
                       </div>
                     </div>
                   </a>
@@ -130,7 +130,7 @@
                     href="https://www.instagram.com/celestialsgg_/"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
-                        <img src="../svgs/instagram.svg" alt="" />
+                        <img src="svgs/instagram.svg" alt="" />
                       </div>
                     </div>
                   </a>
@@ -139,7 +139,7 @@
                     href="https://www.twitch.tv/Celestials_GG"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
-                        <img src="../svgs/twitch.svg" alt="" />
+                        <img src="svgs/twitch.svg" alt="" />
                       </div>
                     </div>
                   </a>
@@ -148,7 +148,7 @@
                     href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
-                        <img src="../svgs/youtube.svg" alt="" />
+                        <img src="svgs/youtube.svg" alt="" />
                       </div>
                     </div>
                   </a>
@@ -157,7 +157,7 @@
               <li class="nav-item">
                 <a
                   class="fw-bold text-light nav-link active"
-                  href="s.html"
+                  href="streams.html"
                   role="button"
                   aria-haspopup="true"
                   aria-expanded="false"
@@ -180,59 +180,72 @@
           </div>
         </div>
       </nav>
-
-      <div class="container-fluid" id="insert">
-        <div class="row mt-5">
-          <div class="col-12">
-            <h2 class="text-center border-bottom text-light">
-              Streamers Currently Live
-            </h2>
-          </div>
-        </div>
-      </div>
-      <div class="container-fluid pb-3" id="offlineContainer">
-        <div class="row mt-5">
+      <div class="container-lg mt-5">
+        <div class="row">
           <div class="col">
-            <h2 class="text-center border-bottom text-light">
-              Streamers Currently Offline
-            </h2>
+            <div class="h1 text-center text-light" style="font-weight: bold">
+              Celestials WoW Roster
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center mt-5">
+          <div class="col-auto">
+            <h1 class="align-middle text-light">Are you interested?</h1>
+          </div>
+          <div class="col-auto">
+            <a
+              class=""
+              href="https://docs.google.com/forms/d/e/1FAIpQLSe_IYu7ci0QRXWmf4dSrzcwAckCzg_8GEDQPrWoGWnFGIW09A/viewform?usp=sf_link"
+            >
+              <button
+                style="height: 100%; width: 100%"
+                class="btn btn-dark rounded-pill"
+                type="button"
+              >
+                <span style="font-weight: bold">APPLY FOR RAID ROSTER</span>
+              </button>
+            </a>
           </div>
         </div>
       </div>
+      <div class="container-fluid pb-5" id="insert">
+        <div class="container-lg"></div>
+      </div>
+      
     </div>
     <div class="container-fluid pt-2" id="grad1">
       <div class="row justify-content-center margin-auto">
         <div class="col-auto">
-          <img src="../svgs/White_C_Logo (1).svg" alt="" />
+          <img src="svgs/White_C_Logo (1).svg" alt="" />
         </div>
         <div class="col-auto">
-          <img src="../svgs/FINALWHITETEXT.svg" alt="" />
+          <img src="svgs/FINALWHITETEXT.svg" alt="" />
         </div>
       </div>
       <div class="row justify-content-center mt-2">
         <div class="col-auto">
           <a href="https://www.twitch.tv/Celestials_GG"
-            ><img src="../svgs/twitch.svg" alt=""
+            ><img src="svgs/twitch.svg" alt=""
           /></a>
         </div>
         <div class="col-auto">
           <a href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
-            ><img src="../svgs/youtube.svg" alt=""
+            ><img src="svgs/youtube.svg" alt=""
           /></a>
         </div>
         <div class="col-auto">
           <a href="https://twitter.com/celestialsgg_"
-            ><img src="../svgs/twitter.svg" alt=""
+            ><img src="svgs/twitter.svg" alt=""
           /></a>
         </div>
         <div class="col-auto">
           <a href="https://www.instagram.com/celestialsgg_/"
-            ><img src="../svgs/instagram.svg" alt=""
+            ><img src="svgs/instagram.svg" alt=""
           /></a>
         </div>
         <div class="col-auto">
           <a href="https://www.tiktok.com/@celestialsgg"
-            ><img src="../svgs/tiktok.svg" alt=""
+            ><img src="svgs/tiktok.svg" alt=""
           /></a>
         </div>
         <div class="row justify-content-end">
@@ -244,7 +257,7 @@
         </div>
       </div>
     </div>
-
+    <script type="module" src="scripts/WoW.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -255,6 +268,5 @@
       integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
       crossorigin="anonymous"
     ></script>
-    <script src="../scripts/streams.js"></script>
   </body>
 </html>
