new navbar color, discord opens in new tab

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <body>
     <div style="background-color: rgb(14, 14, 28)" class="container-fluid p-0">
       <nav
-        class="navgradtest drop-shadownav navbar navbar-expand-lg navbar-light sticky-top mr-0"
+      style="background-color: #181716"
+        class=" drop-shadownav navbar navbar-expand-lg navbar-dark sticky-top mr-0"
       >
         <div class="container-lg">
           <a class="navbar-brand font-weight-bold" href="index.html">
@@ -169,7 +170,8 @@
               </li>
               <li class="nav-item active">
                 <a
-                id="testfont"
+                  target="_blank" rel="noopener noreferrer"
+                  id="testfont"
                   class="fw-bold text-light nav-link active"
                   href="https://discord.gg/celestialsgg"
                   >DISCORD</a
