--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <div style="background-color: rgb(14, 14, 28)" class="container-fluid p-0">
       <nav
-      style="background-color: #181716"
-        class=" drop-shadownav navbar navbar-expand-lg navbar-dark sticky-top mr-0"
+        style="background-color: #181716"
+        class="drop-shadownav navbar navbar-expand-lg navbar-dark sticky-top mr-0"
       >
         <div class="container-lg">
           <a class="navbar-brand font-weight-bold" href="index.html">
@@ -52,7 +52,7 @@
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a
-                id="testfont"
+                  id="testfont"
                   class="fw-bold text-light nav-link active dropdown-toggle"
                   href="#"
                   id="navbarDropdown"
@@ -69,7 +69,11 @@
                 >
                   <a class="dropdown-item" href="valorant.html">
                     <div class="row">
-                      <div class="col"><p id="testfont" class="text-light text-center">Valorant</p></div>
+                      <div class="col">
+                        <p id="testfont" class="text-light text-center">
+                          Valorant
+                        </p>
+                      </div>
                       <div class="col d-flex justify-content-center">
                         <img src="svgs/valorant.svg" alt="" />
                       </div>
@@ -77,7 +81,11 @@
                   </a>
                   <a class="dropdown-item" href="league.html"
                     ><div class="row">
-                      <div class="col"><p  id="testfont" class="text-light text-center">League</p></div>
+                      <div class="col">
+                        <p id="testfont" class="text-light text-center">
+                          League
+                        </p>
+                      </div>
                       <div class="col d-flex justify-content-center">
                         <img src="svgs/league.svg" alt="" />
                       </div>
@@ -85,8 +93,10 @@
                   </a>
                   <a class="dropdown-item" href="wow.html"
                     ><div class="row">
-                      <div class="col-12"><p id="testfont" class="text-light text-center">WoW</p></div>
-                      <div class="col  d-flex justify-content-center">
+                      <div class="col-12">
+                        <p id="testfont" class="text-light text-center">WoW</p>
+                      </div>
+                      <div class="col d-flex justify-content-center">
                         <img src="svgs/WoW.svg" alt="" />
                       </div>
                     </div>
@@ -95,7 +105,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                id="testfont"
+                  id="testfont"
                   class="nav-link active text-light dropdown-toggle fw-bold"
                   href="#"
                   id="navbarDropdown"
@@ -111,6 +121,8 @@
                   aria-labelledby="navbarDropdown"
                 >
                   <a
+                    target="_blank"
+                    rel="noopener noreferrer"
                     class="dropdown-item"
                     href="https://twitter.com/celestialsgg_"
                     ><div class="row justify-content-center">
@@ -120,6 +132,8 @@
                     </div>
                   </a>
                   <a
+                    target="_blank"
+                    rel="noopener noreferrer"
                     class="dropdown-item"
                     href="https://www.tiktok.com/@celestialsgg"
                     ><div class="row justify-content-center">
@@ -129,6 +143,8 @@
                     </div>
                   </a>
                   <a
+                    target="_blank"
+                    rel="noopener noreferrer"
                     class="dropdown-item"
                     href="https://www.instagram.com/celestialsgg_/"
                     ><div class="row justify-content-center">
@@ -138,6 +154,8 @@
                     </div>
                   </a>
                   <a
+                    target="_blank"
+                    rel="noopener noreferrer"
                     class="dropdown-item"
                     href="https://www.twitch.tv/Celestials_GG"
                     ><div class="row justify-content-center">
@@ -147,6 +165,8 @@
                     </div>
                   </a>
                   <a
+                    target="_blank"
+                    rel="noopener noreferrer"
                     class="dropdown-item"
                     href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
                     ><div class="row justify-content-center">
@@ -159,7 +179,7 @@
               </li>
               <li class="nav-item">
                 <a
-                id="testfont"
+                  id="testfont"
                   class="fw-bold text-light nav-link active"
                   href="streams.html"
                   role="button"
@@ -170,7 +190,8 @@
               </li>
               <li class="nav-item active">
                 <a
-                  target="_blank" rel="noopener noreferrer"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   id="testfont"
                   class="fw-bold text-light nav-link active"
                   href="https://discord.gg/celestialsgg"
@@ -190,7 +211,6 @@
                   >STORE</a
                 >
               </li>
-              
             </ul>
           </div>
         </div>
@@ -285,7 +305,7 @@
           ></iframe>
         </div>
       </div>
-      <div class="container-fluid mt-5 pt-2" id="grad1">
+      <div class="container-fluid mt-5 pt-2" style="background-color: #181716">
         <div class="row justify-content-center margin-auto">
           <div class="col-auto">
             <img src="svgs/White_C_Logo (1).svg" alt="" />
@@ -296,27 +316,42 @@
         </div>
         <div class="row justify-content-center mt-2">
           <div class="col-auto">
-            <a href="https://www.twitch.tv/Celestials_GG"
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.twitch.tv/Celestials_GG"
               ><img src="svgs/twitch.svg" alt=""
             /></a>
           </div>
           <div class="col-auto">
-            <a href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
               ><img src="svgs/youtube.svg" alt=""
             /></a>
           </div>
           <div class="col-auto">
-            <a href="https://twitter.com/celestialsgg_"
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://twitter.com/celestialsgg_"
               ><img src="svgs/twitter.svg" alt=""
             /></a>
           </div>
           <div class="col-auto">
-            <a href="https://www.instagram.com/celestialsgg_/"
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.instagram.com/celestialsgg_/"
               ><img src="svgs/instagram.svg" alt=""
             /></a>
           </div>
           <div class="col-auto">
-            <a href="https://www.tiktok.com/@celestialsgg"
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.tiktok.com/@celestialsgg"
               ><img src="svgs/tiktok.svg" alt=""
             /></a>
           </div>
