--- a/wow.html
+++ b/wow.html
@@ -233,6 +233,8 @@
               href="https://docs.google.com/forms/d/e/1FAIpQLSe_IYu7ci0QRXWmf4dSrzcwAckCzg_8GEDQPrWoGWnFGIW09A/viewform?usp=sf_link"
             >
               <button
+                target="_blank"
+                rel="noopener noreferrer"
                 style="height: 100%; width: 100%"
                 class="btn btn-dark rounded-pill"
                 type="button"
