--- a/index.html
+++ b/index.html
@@ -246,7 +246,9 @@
           <div class="col">
             <div class="row">
               <div class="col p-0">
-                <strong class="text-responsivebig text-light text-shadow"
+                <strong
+                  id="secondary"
+                  class="text-responsivebig text-light text-shadow"
                   >NOW RECRUITING FOR:</strong
                 >
               </div>
@@ -254,6 +256,7 @@
             <div class="row">
               <div class="col">
                 <p
+                  id="secondary"
                   style="font-weight: black"
                   class="text-responsive text-light text-shadow"
                 >
@@ -263,12 +266,22 @@
             </div>
             <div class="row">
               <div class="col">
-                <p class="text-responsive text-light text-shadow">LEAGUE</p>
+                <p
+                  id="secondary"
+                  class="text-responsive text-light text-shadow"
+                >
+                  LEAGUE
+                </p>
               </div>
             </div>
             <div class="row">
               <div class="col-7">
-                <p class="text-responsive text-light text-shadow">WoW</p>
+                <p
+                  id="secondary"
+                  class="text-responsive text-light text-shadow"
+                >
+                  WoW
+                </p>
               </div>
               <div class="col-md-3 col-sm-auto">
                 <button
@@ -277,6 +290,7 @@
                   type="button"
                 >
                   <p
+                    id="testfont"
                     style="font-weight: black"
                     class="text-responsive text-light text-shadow p-0"
                   >
