--- a/wow.html
+++ b/wow.html
@@ -225,7 +225,9 @@
         </div>
         <div class="row justify-content-center mt-5">
           <div class="col-auto">
-            <h1 class="align-middle text-light">Are you interested?</h1>
+            <h1 id="secondary" class="align-middle text-light">
+              Are you interested?
+            </h1>
           </div>
           <div class="col-auto">
             <a
