fixing test fonts, minor navbar fix

--- a/streams.html
+++ b/streams.html
@@ -69,7 +69,7 @@
                 >
                   <a class="dropdown-item" href="valorant.html">
                     <div class="row">
-                      <div class="col">
+                      <div class="col-12">
                         <p id="testfont" class="text-light text-center">
                           Valorant
                         </p>
@@ -81,7 +81,7 @@
                   </a>
                   <a class="dropdown-item" href="league.html"
                     ><div class="row">
-                      <div class="col">
+                      <div class="col-12">
                         <p id="testfont" class="text-light text-center">
                           League
                         </p>
