background images and tournaments

--- a/index.html
+++ b/index.html
@@ -215,92 +215,13 @@
           </div>
         </div>
       </nav>
-
-      <div
-        style="height: 100vh"
-        class="container-fluid"
-        id="mainpagebackground"
-      >
-        <div class="row">
-          <div class="col-sm-0 col-md-1"></div>
-          <div class="col">
-            <div class="row">
-              <div class="col">
-                <img class="img-fluid" src="svgs/bigwhiteclogo.svg" alt="" />
-              </div>
-            </div>
-            <div class="row">
-              <div class="col p-0">
-                <img
-                  class="img-fluid"
-                  src="svgs/FINALWHITETEXTBIG.svg"
-                  alt=""
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-1 col-sm-0 pl-0 lr-0"></div>
-          <div class="col">
-            <div class="row">
-              <div class="col p-0">
-                <strong
-                  id="secondary"
-                  class="text-responsivebig text-light text-shadow"
-                  >NOW RECRUITING FOR:</strong
-                >
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                <p
-                  id="secondary"
-                  style="font-weight: black"
-                  class="text-responsive text-light text-shadow"
-                >
-                  VALORANT
-                </p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                <p
-                  id="secondary"
-                  class="text-responsive text-light text-shadow"
-                >
-                  LEAGUE
-                </p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-7">
-                <p
-                  id="secondary"
-                  class="text-responsive text-light text-shadow"
-                >
-                  WoW
-                </p>
-              </div>
-              <div class="col-md-3 col-sm-auto">
-                <button
-                  style="height: 100%; width: 100%"
-                  class="btn btn-dark p-0"
-                  type="button"
-                >
-                  <p
-                    style="font-weight: black"
-                    class="text-responsive text-light text-shadow p-0"
-                  >
-                    Apply Now
-                  </p>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <a href="tournaments.html">
+        <div
+          id="tournament-image"
+          style="height: 100vh"
+          class="container-fluid p-0 mb-0"
+        ></div>
+      </a>
       <div class="container-fluid mt-5">
         <div class="container">
           <iframe
