--- a/league.html
+++ b/league.html
@@ -14,6 +14,7 @@
     />
 
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x -icon" href="images/favicon.png" />
 
     <title>Celestials</title>
   </head>
