--- a/tournaments.html
+++ b/tournaments.html
@@ -12,14 +12,13 @@
       integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF"
       crossorigin="anonymous"
     />
-
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/x -icon" href="images/favicon.png" />
-
     <title>Celestials</title>
+    <!--FAVICON ICON-->
+    <link rel="icon" type="image/x -icon" href="images/favicon.png" />
   </head>
   <body>
-    <div id="grad2" class="container-fluid p-0">
+    <div style="background-color: rgb(5, 0, 10)" class="container-fluid p-0">
       <nav
         style="background-color: #181716"
         class="drop-shadownav navbar navbar-expand-lg navbar-dark sticky-top mr-0"
@@ -217,81 +216,80 @@
         </div>
       </nav>
 
-      <div class="container-fluid" id="insert">
-        <div class="row mt-5">
-          <div class="col-12">
-            <h2 class="text-center border-bottom text-light">
-              Streamers Currently Live
-            </h2>
+      <div
+        style="height: 100vh"
+        id="tournament-image-info"
+        class="container-fluid p-0 mb-0"
+      ></div>
+
+      <div class="container-fluid mt-4" style="height: 50vh">
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLScPHl_QwtHzp8O8qWAJrPt5yMSOBZkISiXNtPqmy7ktwEzd4w/viewform?embedded=true"
+          width="100%"
+          height="100%"
+          frameborder="0"
+          marginheight="0"
+          marginwidth="0"
+          >Loading…</iframe
+        >
+      </div>
+      <div class="container-fluid mt-5 pt-2" style="background-color: #181716">
+        <div class="row justify-content-center margin-auto">
+          <div class="col-auto">
+            <img src="svgs/White_C_Logo (1).svg" alt="" />
+          </div>
+          <div class="col-auto">
+            <img src="svgs/FINALWHITETEXT.svg" alt="" />
           </div>
         </div>
-      </div>
-      <div class="container-fluid pb-3" id="offlineContainer">
-        <div class="row mt-5">
-          <div class="col">
-            <h2 id="testjoe" class="text-center border-bottom text-light">
-              Streamers Currently Offline
-            </h2>
+        <div class="row justify-content-center mt-2">
+          <div class="col-auto">
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.twitch.tv/Celestials_GG"
+              ><img src="svgs/twitch.svg" alt=""
+            /></a>
+          </div>
+          <div class="col-auto">
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
+              ><img src="svgs/youtube.svg" alt=""
+            /></a>
+          </div>
+          <div class="col-auto">
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://twitter.com/celestialsgg_"
+              ><img src="svgs/twitter.svg" alt=""
+            /></a>
+          </div>
+          <div class="col-auto">
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.instagram.com/celestialsgg_/"
+              ><img src="svgs/instagram.svg" alt=""
+            /></a>
+          </div>
+          <div class="col-auto">
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.tiktok.com/@celestialsgg"
+              ><img src="svgs/tiktok.svg" alt=""
+            /></a>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="container-fluid pt-2" style="background-color: #181716">
-      <div class="row justify-content-center margin-auto">
-        <div class="col-auto">
-          <img src="svgs/White_C_Logo (1).svg" alt="" />
-        </div>
-        <div class="col-auto">
-          <img src="svgs/FINALWHITETEXT.svg" alt="" />
-        </div>
-      </div>
-      <div class="row justify-content-center mt-2">
-        <div class="col-auto">
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            href="https://www.twitch.tv/Celestials_GG"
-            ><img src="svgs/twitch.svg" alt=""
-          /></a>
-        </div>
-        <div class="col-auto">
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
-            ><img src="svgs/youtube.svg" alt=""
-          /></a>
-        </div>
-        <div class="col-auto">
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            href="https://twitter.com/celestialsgg_"
-            ><img src="svgs/twitter.svg" alt=""
-          /></a>
-        </div>
-        <div class="col-auto">
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            href="https://www.instagram.com/celestialsgg_/"
-            ><img src="svgs/instagram.svg" alt=""
-          /></a>
-        </div>
-        <div class="col-auto">
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            href="https://www.tiktok.com/@celestialsgg"
-            ><img src="svgs/tiktok.svg" alt=""
-          /></a>
-        </div>
-      </div>
-      <div class="row justify-content-end">
-        <div class="col-7 col-md-3">
-          <p style="font-weight: bold" class="text-center text-light m-0">
-            &#169; CELESTIALS 2022
-          </p>
+        <div class="row justify-content-end">
+          <div class="col-7 col-md-3">
+            <p style="font-weight: bold" class="text-center text-light m-0">
+              &#169; CELESTIALS 2022
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -306,6 +304,5 @@
       integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
       crossorigin="anonymous"
     ></script>
-    <script src="scripts/streams.js"></script>
   </body>
 </html>
