--- a/wow.html
+++ b/wow.html
@@ -14,7 +14,7 @@
     />
 
     <link rel="stylesheet" href="styles.css" />
-
+    <link rel="icon" type="image/x -icon" href="images/favicon.png" />
     <title>Celestials</title>
   </head>
   <body>
