--- a/streams.html
+++ b/streams.html
@@ -12,6 +12,10 @@
       integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x -icon" href="images/favicon.png" />
@@ -220,7 +224,9 @@
       <div class="container-fluid" id="insert">
         <div class="row mt-5">
           <div class="col-12">
-            <h2 class="text-center border-bottom text-light">
+            <h2
+              class="text-center border-bottom text-light animate__animated animate__fadeInDown"
+            >
               Streamers Currently Live
             </h2>
           </div>
@@ -229,7 +235,10 @@
       <div class="container-fluid pb-3" id="offlineContainer">
         <div class="row mt-5">
           <div class="col">
-            <h2 id="testjoe" class="text-center border-bottom text-light">
+            <h2
+              id="testjoe"
+              class="text-center border-bottom text-light animate__animated animate__fadeInRight"
+            >
               Streamers Currently Offline
             </h2>
           </div>
