--- a/valorant.html
+++ b/valorant.html
@@ -15,6 +15,10 @@
 
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x -icon" href="images/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 
     <title>Celestials</title>
   </head>
@@ -220,7 +224,10 @@
       <div class="container-fluid">
         <div class="row mt-5">
           <div class="col">
-            <div class="h1 text-center text-light" style="font-weight: bold">
+            <div
+              class="h1 text-center text-light animate__animated animate__fadeInDown"
+              style="font-weight: bold"
+            >
               Celestials Valorant Roster
             </div>
           </div>
