--- a/wow.html
+++ b/wow.html
@@ -12,6 +12,10 @@
       integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x -icon" href="images/favicon.png" />
@@ -219,14 +223,20 @@
       <div class="container-lg mt-5">
         <div class="row">
           <div class="col">
-            <div class="h1 text-center text-light" style="font-weight: bold">
+            <div
+              class="animate__animated animate__fadeInDown h1 text-center text-light"
+              style="font-weight: bold"
+            >
               Celestials WoW Roster
             </div>
           </div>
         </div>
         <div class="row justify-content-center mt-5">
           <div class="col-auto">
-            <h1 id="secondary" class="align-middle text-light">
+            <h1
+              id="secondary"
+              class="animate__animated animate__fadeInUp align-middle text-light"
+            >
               Are you interested?
             </h1>
           </div>
@@ -239,7 +249,7 @@
             >
               <button
                 style="height: 100%; width: 100%"
-                class="btn btn-dark rounded-pill"
+                class="btn btn-dark rounded-pill animate__animated animate__fadeInUp"
                 type="button"
               >
                 <span style="font-weight: bold">APPLY FOR RAID ROSTER</span>
