--- a/league.html
+++ b/league.html
@@ -15,6 +15,10 @@
 
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x -icon" href="images/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 
     <title>Celestials</title>
   </head>
@@ -221,7 +225,7 @@
         <div class="row">
           <div class="col">
             <div
-              class="h1 text-center mt-5 text-light"
+              class="h1 text-center mt-5 text-light animate__animated animate__fadeInDown"
               style="font-weight: bold"
             >
               Celestials League Roster
