--- a/tournaments.html
+++ b/tournaments.html
@@ -304,5 +304,41 @@
       integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
       crossorigin="anonymous"
     ></script>
+    <script>
+      var express = require("express");
+      var app = express();
+
+      app.get("/", function (req, res) {
+        var sql = require("mssql");
+
+        // config for your database
+        var config = {
+          user: "sa",
+          password: "mypassword",
+          server: "localhost",
+          database: "SchoolDB",
+        };
+
+        // connect to your database
+        sql.connect(config, function (err) {
+          if (err) console.log(err);
+
+          // create Request object
+          var request = new sql.Request();
+
+          // query to the database and get the records
+          request.query("select * from Student", function (err, recordset) {
+            if (err) console.log(err);
+
+            // send records as a response
+            res.send(recordset);
+          });
+        });
+      });
+
+      var server = app.listen(5000, function () {
+        console.log("Server is running..");
+      });
+    </script>
   </body>
 </html>
