--- a/streams.html
+++ b/streams.html
@@ -26,198 +26,207 @@
     <div id="grad2" class="container-fluid p-0">
       <nav
         style="background-color: #181716"
-        class="drop-shadownav navbar navbar-expand-lg navbar-dark sticky-top mr-0"
+        class="drop-shadownav navbar navbar-expand-xl navbar-dark sticky-top"
       >
-        <div class="container-lg">
-          <a class="navbar-brand font-weight-bold" href="index.html">
-            <div class="row">
-              <div class="col d-flex justify-content-center p-0">
-                <img src="svgs/White_C_Logo (1).svg" alt="" />
-              </div>
-              <div class="col p-0 align-middle">
-                <img src="svgs/FINALWHITETEXT.svg" alt="" />
-              </div>
+        <a class="navbar-brand" href="index.html">
+          <div class="row">
+            <div
+              class="col d-block d-md-none d-lg-block d-flex justify-content-center"
+            >
+              <img class="hidden-sm" src="svgs/White_C_Logo (1).svg" alt="" />
             </div>
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a
-                  id="testfont"
-                  class="fw-bold text-light nav-link active dropdown-toggle"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                >
-                  TEAMS
-                </a>
-                <div
-                  class="dropdown-menu bg-dark"
-                  aria-labelledby="navbarDropdown"
-                >
-                  <a class="dropdown-item" href="valorant.html">
-                    <div class="row">
-                      <div class="col-12">
-                        <p id="testfont" class="text-light text-center">
-                          Valorant
-                        </p>
-                      </div>
-                      <div class="col d-flex justify-content-center">
-                        <img src="svgs/valorant.svg" alt="" />
-                      </div>
-                    </div>
-                  </a>
-                  <a class="dropdown-item" href="league.html"
-                    ><div class="row">
-                      <div class="col-12">
-                        <p id="testfont" class="text-light text-center">
-                          League
-                        </p>
-                      </div>
-                      <div class="col d-flex justify-content-center">
-                        <img src="svgs/league.svg" alt="" />
-                      </div>
-                    </div>
-                  </a>
-                  <a class="dropdown-item" href="wow.html"
-                    ><div class="row">
-                      <div class="col-12">
-                        <p id="testfont" class="text-light text-center">WoW</p>
-                      </div>
-                      <div class="col d-flex justify-content-center">
-                        <img src="svgs/WoW.svg" alt="" />
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  id="testfont"
-                  class="nav-link active text-light dropdown-toggle fw-bold"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                >
-                  SOCIALS
-                </a>
-                <div
-                  class="dropdown-menu bg-dark"
-                  aria-labelledby="navbarDropdown"
-                >
-                  <a
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="dropdown-item"
-                    href="https://twitter.com/celestialsgg_"
-                    ><div class="row justify-content-center">
-                      <div class="col-auto">
-                        <img src="svgs/twitter.svg" alt="" />
-                      </div>
-                    </div>
-                  </a>
-                  <a
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="dropdown-item"
-                    href="https://www.tiktok.com/@celestialsgg"
-                    ><div class="row justify-content-center">
-                      <div class="col-auto">
-                        <img src="svgs/tiktok.svg" alt="" />
-                      </div>
-                    </div>
-                  </a>
-                  <a
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="dropdown-item"
-                    href="https://www.instagram.com/celestialsgg_/"
-                    ><div class="row justify-content-center">
-                      <div class="col-auto">
-                        <img src="svgs/instagram.svg" alt="" />
-                      </div>
-                    </div>
-                  </a>
-                  <a
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="dropdown-item"
-                    href="https://www.twitch.tv/Celestials_GG"
-                    ><div class="row justify-content-center">
-                      <div class="col-auto">
-                        <img src="svgs/twitch.svg" alt="" />
-                      </div>
-                    </div>
-                  </a>
-                  <a
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="dropdown-item"
-                    href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
-                    ><div class="row justify-content-center">
-                      <div class="col-auto">
-                        <img src="svgs/youtube.svg" alt="" />
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a
-                  id="testfont"
-                  class="fw-bold text-light nav-link active"
-                  href="streams.html"
-                  role="button"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                  >STREAMERS</a
-                >
-              </li>
-              <li class="nav-item active">
+            <div class="col p-0 align-middle">
+              <img src="svgs/FINALWHITETEXT.svg" alt="" />
+            </div>
+          </div>
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown mr-1">
+              <a
+                id="testfont"
+                class="nav-link active text-light dropdown-toggle fw-bold"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                SOCIALS
+              </a>
+              <div
+                class="dropdown-menu bg-dark"
+                aria-labelledby="navbarDropdown"
+              >
                 <a
                   target="_blank"
                   rel="noopener noreferrer"
-                  id="testfont"
-                  class="fw-bold text-light nav-link active"
-                  href="https://discord.gg/celestialsgg"
-                  >DISCORD</a
-                >
-              </li>
-              <li class="nav-item active">
+                  class="dropdown-item"
+                  href="https://twitter.com/celestialsgg_"
+                  ><div class="row justify-content-center">
+                    <div class="col-auto">
+                      <img src="svgs/twitter.svg" alt="" />
+                    </div>
+                  </div>
+                </a>
                 <a
-                  id="testfont"
-                  class="fw-bold text-light nav-link active"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                  >STORE</a
-                >
-              </li>
-            </ul>
-          </div>
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="dropdown-item"
+                  href="https://www.tiktok.com/@celestialsgg"
+                  ><div class="row justify-content-center">
+                    <div class="col-auto">
+                      <img src="svgs/tiktok.svg" alt="" />
+                    </div>
+                  </div>
+                </a>
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="dropdown-item"
+                  href="https://www.instagram.com/celestialsgg_/"
+                  ><div class="row justify-content-center">
+                    <div class="col-auto">
+                      <img src="svgs/instagram.svg" alt="" />
+                    </div>
+                  </div>
+                </a>
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="dropdown-item"
+                  href="https://www.twitch.tv/Celestials_GG"
+                  ><div class="row justify-content-center">
+                    <div class="col-auto">
+                      <img src="svgs/twitch.svg" alt="" />
+                    </div>
+                  </div>
+                </a>
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="dropdown-item"
+                  href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
+                  ><div class="row justify-content-center">
+                    <div class="col-auto">
+                      <img src="svgs/youtube.svg" alt="" />
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+            <li class="nav-item dropdown m-0">
+              <a
+                id="testfont"
+                class="fw-bold text-light nav-link active dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                TEAMS
+              </a>
+              <div
+                class="dropdown-menu bg-dark"
+                aria-labelledby="navbarDropdown"
+              >
+                <a class="dropdown-item" href="valorant.html">
+                  <div class="row">
+                    <div class="col-12">
+                      <p id="testfont" class="text-light text-center">
+                        Valorant
+                      </p>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                      <img src="svgs/valorant.svg" alt="" />
+                    </div>
+                  </div>
+                </a>
+                <a class="dropdown-item" href="league.html"
+                  ><div class="row">
+                    <div class="col-12">
+                      <p id="testfont" class="text-light text-center">League</p>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                      <img src="svgs/league.svg" alt="" />
+                    </div>
+                  </div>
+                </a>
+                <a class="dropdown-item" href="wow.html"
+                  ><div class="row">
+                    <div class="col-12">
+                      <p id="testfont" class="text-light text-center">WoW</p>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                      <img src="svgs/WoW.svg" alt="" />
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+            <li class="nav-item mr-1">
+              <a
+                id="testfont"
+                class="fw-bold text-light nav-link active"
+                href="streams.html"
+                role="button"
+                aria-haspopup="true"
+                aria-expanded="false"
+                >STREAMERS</a
+              >
+            </li>
+            <li class="nav-item active m-0">
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                id="testfont"
+                class="fw-bold text-light nav-link active"
+                href="https://discord.gg/celestialsgg"
+                >DISCORD</a
+              >
+            </li>
+            <li class="nav-item active mr-1">
+              <a
+                id="testfont"
+                class="fw-bold text-light nav-link active"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+                >STORE</a
+              >
+            </li>
+            <li class="nav-item m-0">
+              <a
+                id="testfont"
+                class="fw-bold text-light nav-link active"
+                href="about.html"
+                role="button"
+                aria-haspopup="true"
+                aria-expanded="false"
+                >ABOUT US</a
+              >
+            </li>
+          </ul>
         </div>
       </nav>
 
