--- a/about.html
+++ b/about.html
@@ -21,14 +21,14 @@
     <div style="background-color: rgb(14, 14, 28)" class="container-fluid p-0">
       <nav
         style="background-color: #181716"
-        class="drop-shadownav navbar navbar-expand-lg navbar-dark sticky-top"
+        class="drop-shadownav navbar navbar-expand-xxl navbar-dark sticky-top"
       >
         <a class="navbar-brand" href="index.html">
           <div class="row">
-            <div class="col d-flex justify-content-center pl-3">
-              <img src="svgs/White_C_Logo (1).svg" alt="" />
+            <div class="col d-flex justify-content-center">
+              <img class="" src="svgs/White_C_Logo (1).svg" alt="" />
             </div>
-            <div class="col p-0 align-middle">
+            <div class="col align-middle p-0">
               <img src="svgs/FINALWHITETEXT.svg" alt="" />
             </div>
           </div>
