--- a/tournaments.html
+++ b/tournaments.html
@@ -21,16 +21,14 @@
     <div style="background-color: rgb(5, 0, 10)" class="container-fluid p-0">
       <nav
         style="background-color: #181716"
-        class="drop-shadownav navbar navbar-expand-xl navbar-dark sticky-top"
+        class="drop-shadownav navbar navbar-expand-xxl navbar-dark sticky-top"
       >
         <a class="navbar-brand" href="index.html">
           <div class="row">
-            <div
-              class="col d-block d-md-none d-lg-block d-flex justify-content-center"
-            >
-              <img class="hidden-sm" src="svgs/White_C_Logo (1).svg" alt="" />
+            <div class="col d-flex justify-content-center">
+              <img class="" src="svgs/White_C_Logo (1).svg" alt="" />
             </div>
-            <div class="col p-0 align-middle">
+            <div class="col align-middle p-0">
               <img src="svgs/FINALWHITETEXT.svg" alt="" />
             </div>
           </div>
@@ -51,7 +49,7 @@
           id="navbarNav"
         >
           <ul class="navbar-nav">
-            <li class="nav-item dropdown mr-1">
+            <li class="nav-item dropdown">
               <a
                 id="testfont"
                 class="nav-link active text-light dropdown-toggle fw-bold"
@@ -125,7 +123,7 @@
                 </a>
               </div>
             </li>
-            <li class="nav-item dropdown m-0">
+            <li class="nav-item dropdown">
               <a
                 id="testfont"
                 class="fw-bold text-light nav-link active dropdown-toggle"
@@ -176,7 +174,7 @@
                 </a>
               </div>
             </li>
-            <li class="nav-item mr-1">
+            <li class="nav-item">
               <a
                 id="testfont"
                 class="fw-bold text-light nav-link active"
@@ -187,7 +185,7 @@
                 >STREAMERS</a
               >
             </li>
-            <li class="nav-item active m-0">
+            <li class="nav-item active">
               <a
                 target="_blank"
                 rel="noopener noreferrer"
@@ -197,7 +195,7 @@
                 >DISCORD</a
               >
             </li>
-            <li class="nav-item active mr-1">
+            <li class="nav-item active">
               <a
                 id="testfont"
                 class="fw-bold text-light nav-link active"
@@ -210,7 +208,7 @@
                 >STORE</a
               >
             </li>
-            <li class="nav-item m-0">
+            <li class="nav-item">
               <a
                 id="testfont"
                 class="fw-bold text-light nav-link active"
