new small gradient

--- a/wow.html
+++ b/wow.html
@@ -259,7 +259,9 @@
                 class="btn btn-dark rounded-pill animate__animated animate__fadeInUp"
                 type="button"
               >
-                <span style="font-weight: bold">APPLY FOR RAID ROSTER</span>
+                <span class="title" style="font-weight: bold"
+                  >APPLY FOR RAID ROSTER</span
+                >
               </button>
             </a>
           </div>
